Fix spacing between numbers and code in kramdown fenced code blocks in comments.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -267,7 +267,7 @@ label {
 
 /* Article Show */
 
-#article {
+#article, #comments {
   h2 {
     margin-bottom: 20px;
   }
